--- a/index.html
+++ b/index.html
@@ -26,6 +26,9 @@
             <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="training.html">Training</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
