--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
             <a class="nav-link" href="training.html">Training</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
