--- a/services.html
+++ b/services.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -27,6 +26,12 @@
             <a class="nav-link" href="services.html">Services</a>
           </li>
           <li class="nav-item">
+            <a class="nav-link" href="training.html">Training</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+          </li>
+          <li class="nav-item">
             <a class="nav-link" href="contact.html">Contact</a>
           </li>
         </ul>
@@ -37,7 +42,48 @@
   <main>
     <div class="container">
       <h1>Our Services</h1>
-      <p>We offer a wide range of services to meet your needs.</p>
+      <div class="row">
+        <div class="col-lg-6 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">IT Services</h5>
+              <p class="card-text">We provide a range of IT services to cater to your business needs. From system integration to network management, our team of experts ensures seamless IT operations.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Software Development</h5>
+              <p class="card-text">We specialize in software development, creating custom solutions to meet your unique requirements. Our development team follows industry best practices to deliver high-quality software products.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Freelancing</h5>
+              <p class="card-text">Need an extra hand for your projects? We offer freelance services in various IT domains, including web development, mobile app development, and more. Our experienced freelancers can assist you in achieving your project goals.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Project Support</h5>
+              <p class="card-text">Struggling with a challenging project? Our project support services provide the necessary expertise and guidance to ensure successful project completion. We assist with project planning, execution, and monitoring to achieve desired outcomes.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-6 mb-4">
+          <div class="card">
+            <div class="card-body">
+              <h5 class="card-title">Online Training in Software</h5>
+              <p class="card-text">Upgrade your skills with our comprehensive online training programs. We offer training in various software technologies, including HTML, CSS, JavaScript, ReactJS, Node.js, MySQL, and more. Our expert trainers provide hands-on guidance and support.</p>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
 
