--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My App - Services</title>
+  <title>OjaArv - Services</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">My App</a>
+      <a class="navbar-brand" href="index.html"><i>OjaArv</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,7 +41,7 @@
 
   <main>
     <div class="container">
-      <h1>Our Services</h1>
+      <h3 class="text-center"><i>Our Services</i></h3>
       <div class="row">
         <div class="col-lg-6 mb-4">
           <div class="card">
@@ -89,7 +89,7 @@
 
   <footer class="footer bg-dark text-white text-center py-3">
     <div class="container">
-      &copy; 2023 My App. All rights reserved.
+      &copy; 2023 <i>OjaArv</i>. All rights reserved. | Phone: +1-848-248-0465
     </div>
   </footer>
 
