--- a/training.html
+++ b/training.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Training - IT Software Online Trainings</title>
+  <title>OjaArv - Training</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
   <style>
@@ -18,9 +18,9 @@
       margin-bottom: 1rem;
     }
 
-    .card-text {
+    /* .card-text {
       font-size: 0.9rem;
-    }
+    } */
 
     @media (min-width: 576px) {
       .card {
@@ -33,7 +33,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">IT Software Online Trainings</a>
+      <a class="navbar-brand" href="index.html"><i>OjaArv</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -61,47 +61,103 @@
   </header>
 
   <main>
-    <section class="section">
-      <div class="container">
-        <h1>IT Software Online Trainings</h1>
-        <p>Enhance your skills with our comprehensive online training courses.</p>
-
-        <div class="row">
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Web Development</h5>
-                <p class="card-text">Learn HTML, HTML5, CSS, CSS3, Bootstrap, JavaScript, ES6, ES7, jQuery, ReactJS, and
-                  Angular to build modern and responsive web applications.</p>
-              </div>
+    <div class="container">
+    <h3 class="text-center"><i>Online Training</i></h3>
+      <p>We are a leading provider of IT services and online training. With years of experience and a dedicated team of
+        professionals, we deliver exceptional solutions to our clients worldwide.</p>
+      <p>Our comprehensive range of training includes:</p>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">HTML</h3>
+              <p class="card-text">Learn the fundamentals of HTML to create the structure and content of web pages.</p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Backend Development</h5>
-                <p class="card-text">Master Node.js, MySQL, and SQL Server to develop powerful server-side applications
-                  and manage databases efficiently.</p>
-              </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">CSS</h3>
+              <p class="card-text">Master the art of CSS to style and enhance the appearance of your web pages.</p>
             </div>
           </div>
-          <div class="col-md-6 col-lg-4 mb-4">
-            <div class="card">
-              <div class="card-body d-flex flex-column">
-                <h5 class="card-title">Full Stack Development</h5>
-                <p class="card-text">Combine frontend and backend skills to become a Full Stack Developer, capable of
-                  building end-to-end web applications.</p>
-              </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">JavaScript</h3>
+              <p class="card-text">Unlock the power of JavaScript to add interactivity and dynamic behavior to your web applications.</p>
             </div>
           </div>
         </div>
       </div>
-    </section>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">ReactJS</h3>
+              <p class="card-text">Discover ReactJS, a powerful JavaScript library for building interactive user interfaces and reusable UI components.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Angular</h3>
+              <p class="card-text">Explore Angular, a comprehensive web application framework, to build scalable and dynamic web applications.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Node.js</h3>
+              <p class="card-text">Learn Node.js, a server-side JavaScript runtime, to build fast and scalable network applications.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">MySQL</h3>
+              <p class="card-text">Get hands-on experience with MySQL, a popular open-source database management system.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">SQL Server</h3>
+              <p class="card-text">Explore SQL Server, a relational database management system, to store and retrieve data efficiently.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Bootstrap</h3>
+              <p class="card-text">Learn how to use Bootstrap, a popular CSS framework, to build responsive and visually appealing websites.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <br>
+      <p>At <i>OjaArv</i>, we are committed to delivering high-quality training programs that help individuals acquire the
+        necessary skills to succeed in the IT industry. Our experienced instructors and practical hands-on approach ensure
+        that you gain the knowledge and confidence to excel in your chosen field.</p>
+      <p>Ready to expand your knowledge and advance your career? Browse our training courses and start your learning journey
+        with <i>OjaArv</i> today.</p>
+      <a class="btn btn-primary" href="training.html">Browse Courses</a>
+    </div>
   </main>
+  
 
   <footer class="footer bg-dark text-white text-center py-3">
     <div class="container">
-      &copy; 2023 IT Software Online Trainings. All rights reserved.
+      &copy; 2023 <i><i>OjaArv</i></i>. All rights reserved. | Phone: +1-848-248-0465
     </div>
   </footer>
 
