--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My App - About</title>
+  <title>OjaArv - About</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">My App</a>
+      <a class="navbar-brand" href="index.html"><i>OjaArv</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,27 +41,27 @@
 
   <main>
     <div class="container">
-      <h1>About Us</h1>
+      <h3 class="text-center"><i>About Us</i></h3>
       <p>We are a leading IT services company with a strong presence in the industry since 2015. With our years of
         experience, we have been providing exceptional IT solutions to clients worldwide.</p>
 
-      <h3>Our Mission</h3>
-      <p>At My App, our mission is to deliver top-quality IT services and training programs that empower individuals and
+      <h5 class="card-title">Our Mission</h5>
+      <p>At <i>OjaArv</i>, our mission is to deliver top-quality IT services and training programs that empower individuals and
         organizations to thrive in the digital world. We strive to provide innovative solutions and exceed customer
         expectations in every project we undertake.</p>
 
-      <h3>Online Training</h3>
+      <h5>Online Training</h5>
       <p>We offer comprehensive online training programs in various IT domains, including software development,
         web development, database management, and more. Our courses are designed to equip learners with the skills and
         knowledge needed to excel in the ever-evolving IT industry.</p>
 
-      <h3>IT Services</h3>
+      <h5>IT Services</h5>
       <p>With our team of skilled professionals, we provide a wide range of IT services to meet the diverse needs of our
         clients. Our services include software development, system integration, network management, IT consulting, and
         support. We leverage the latest technologies and industry best practices to deliver efficient and reliable
         solutions.</p>
 
-      <h3>Why Choose Us?</h3>
+      <h5>Why Choose Us?</h5>
       <ul>
         <li>Expertise: Our team consists of highly skilled professionals with extensive experience in their respective
           domains. We stay updated with the latest industry trends to deliver cutting-edge solutions.</li>
@@ -73,7 +73,7 @@
           well-defined project management approach to ensure on-time completion.</li>
       </ul>
 
-      <h3>Get in Touch</h3>
+      <h5>Get in Touch</h5>
       <p>Ready to take your IT projects and skills to the next level? Contact us today to discuss your requirements or
         to enroll in our online training programs. We are here to assist you every step of the way.</p>
     </div>
@@ -81,7 +81,7 @@
 
   <footer class="footer bg-dark text-white text-center py-3">
     <div class="container">
-      &copy; 2023 My App. All rights reserved.
+      &copy; 2023 <i>OjaArv</i>. All rights reserved. | Phone: +1-848-248-0465
     </div>
   </footer>
 
