--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My App</title>
+  <title>OjaArv - Home</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">My App</a>
+      <a class="navbar-brand" href="index.html"><i>OjaArv</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,14 +41,65 @@
 
   <main>
     <div class="container">
-      <h1>Welcome to My App</h1>
-      <p>This is the home page of my app.</p>
+     <h3 class="text-center">Welcome to <i>OjaArv</i></h3>
+      <p>We are a leading provider of IT services and online training. With years of experience and a dedicated team of
+        professionals, we deliver exceptional solutions to our clients worldwide.</p>
+      <p>Our comprehensive range of services includes:</p>
+      <div class="row">
+        <div class="col-md-6">
+          <div class="service">
+            <h3>Software Development</h3>
+            <p>Our software development solutions are tailored to your unique business requirements. From web applications
+              to mobile apps, we create cutting-edge software products that drive innovation and growth.</p>
+          </div>
+          <div class="service">
+            <h3>Web Development</h3>
+            <p>Our web development services cover everything from building responsive websites to developing e-commerce
+              platforms. We leverage the latest web technologies to deliver engaging online experiences that captivate
+              your audience.</p>
+          </div>
+          <div class="service">
+            <h3>Mobile App Development</h3>
+            <p>Specializing in mobile app development for iOS and Android, we bring your app ideas to life. Whether you
+              need a native app or a cross-platform solution, our skilled developers deliver exceptional mobile
+              experiences.</p>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <div class="service">
+            <h3>IT Consulting</h3>
+            <p>Our experienced IT consultants provide strategic guidance and advice to help you make informed technology
+              decisions. We analyze your business needs and recommend the best IT solutions for your growth and
+              success.</p>
+          </div>
+          <div class="service">
+            <h3>Project Support</h3>
+            <p>If you're facing challenges with your ongoing projects, our project support services can provide the
+              expertise and resources you need. We assist with project planning, execution, and management to ensure
+              successful outcomes.</p>
+          </div>
+          <div class="service">
+            <h3>Online Training</h3>
+            <p>Enhance your skills and stay ahead in the fast-paced IT industry with our online training programs. We
+              offer courses in various technologies, including HTML, CSS, JavaScript, React, Angular, Node.js, and more.
+              Our expert instructors provide comprehensive training to help you excel in your chosen field.</p>
+          </div>
+        </div>
+      </div>
+      <p>At <i>OjaArv</i>, we are committed to delivering high-quality solutions that meet your specific needs. Our team of
+        skilled professionals combines technical expertise with creative thinking to provide innovative and
+        cost-effective IT solutions.</p>
+      <p>Ready to take your projects and skills to the next level? Explore our services and training programs to see how
+        we can assist you. Get in touch with us today to discuss your requirements and start your journey with <i>OjaArv</i>.</p>
+      <a class="btn btn-primary" href="services.html">Learn More</a>
     </div>
   </main>
 
+
+
   <footer class="footer bg-dark text-white text-center py-3">
     <div class="container">
-      &copy; 2023 My App. All rights reserved.
+      &copy; 2023 <i>OjaArv</i>. All rights reserved. | Phone: +1-848-248-0465
     </div>
   </footer>
 
