--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My App - About</title>
+  <title><i>OjaArv</i> - About</title>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   <link rel="stylesheet" href="styles.css">
 </head>
@@ -12,7 +12,7 @@
 <body>
   <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="#">My App</a>
+      <a class="navbar-brand" href="#"><i>OjaArv</i></a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -41,47 +41,113 @@
 
   <main>
     <div class="container">
-      <h1>About Us</h1>
-      <p>We are a leading IT services company with a strong presence in the industry since 2015. With our years of
-        experience, we have been providing exceptional IT solutions to clients worldwide.</p>
-
-      <h3>Our Mission</h3>
-      <p>At My App, our mission is to deliver top-quality IT services and training programs that empower individuals and
-        organizations to thrive in the digital world. We strive to provide innovative solutions and exceed customer
-        expectations in every project we undertake.</p>
-
-      <h3>Online Training</h3>
-      <p>We offer comprehensive online training programs in various IT domains, including software development,
-        web development, database management, and more. Our courses are designed to equip learners with the skills and
-        knowledge needed to excel in the ever-evolving IT industry.</p>
-
-      <h3>IT Services</h3>
-      <p>With our team of skilled professionals, we provide a wide range of IT services to meet the diverse needs of our
-        clients. Our services include software development, system integration, network management, IT consulting, and
-        support. We leverage the latest technologies and industry best practices to deliver efficient and reliable
-        solutions.</p>
-
-      <h3>Why Choose Us?</h3>
-      <ul>
-        <li>Expertise: Our team consists of highly skilled professionals with extensive experience in their respective
-          domains. We stay updated with the latest industry trends to deliver cutting-edge solutions.</li>
-        <li>Customer-centric Approach: We prioritize customer satisfaction and work closely with our clients to
-          understand their unique requirements. We tailor our solutions to meet their specific goals and objectives.</li>
-        <li>Quality Commitment: We are committed to delivering excellence in every project. Our stringent quality
-          assurance processes ensure that our deliverables meet the highest standards.</li>
-        <li>Timely Delivery: We value time and understand the importance of timely project delivery. We follow a
-          well-defined project management approach to ensure on-time completion.</li>
-      </ul>
-
-      <h3>Get in Touch</h3>
-      <p>Ready to take your IT projects and skills to the next level? Contact us today to discuss your requirements or
-        to enroll in our online training programs. We are here to assist you every step of the way.</p>
+      <h1>Welcome to <i>OjaArv</i></h1>
+      <p>We are a leading provider of IT services and online training. With years of experience and a dedicated team of
+        professionals, we deliver exceptional solutions to our clients worldwide.</p>
+      <p>Our comprehensive range of training includes:</p>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">HTML</h3>
+              <p class="card-text">Learn the fundamentals of HTML to create the structure and content of web pages.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">CSS</h3>
+              <p class="card-text">Master the art of CSS to style and enhance the appearance of your web pages.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">JavaScript</h3>
+              <p class="card-text">Unlock the power of JavaScript to add interactivity and dynamic behavior to your web applications.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">ReactJS</h3>
+              <p class="card-text">Discover ReactJS, a powerful JavaScript library for building interactive user interfaces and reusable UI components.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Angular</h3>
+              <p class="card-text">Explore Angular, a comprehensive web application framework, to build scalable and dynamic web applications.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Node.js</h3>
+              <p class="card-text">Learn Node.js, a server-side JavaScript runtime, to build fast and scalable network applications.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">MySQL</h3>
+              <p class="card-text">Get hands-on experience with MySQL, a popular open-source database management system.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">SQL Server</h3>
+              <p class="card-text">Explore SQL Server, a relational database management system, to store and retrieve data efficiently.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="card">
+            <div class="card-body">
+              <h3 class="card-title">Bootstrap</h3>
+              <p class="card-text">Learn how to use Bootstrap, a popular CSS framework, to build responsive and visually appealing websites.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+      <p>At <i>OjaArv</i>, we are committed to delivering high-quality training programs that help individuals acquire the
+        necessary skills to succeed in the IT industry. Our experienced instructors and practical hands-on approach ensure
+        that you gain the knowledge and confidence to excel in your chosen field.</p>
+      <p>Ready to expand your knowledge and advance your career? Browse our training courses and start your learning journey
+        with <i>OjaArv</i> today.</p>
+      <a class="btn btn-primary" href="training.html">Browse Courses</a>
     </div>
   </main>
+  Bold: <b><i>OjaArv</i></b>
+Italic: <i><i>OjaArv</i></i>
+Underline: <u><i>OjaArv</i></u>
+Capitalize: <span style="text-transform: uppercase;"><i>OjaArv</i></span>
+Strikethrough: <del><i>OjaArv</i></del>
+Colored: <span style="color: #ff0000;"><i>OjaArv</i></span>
+Highlighted: <mark><i>OjaArv</i></mark>
+Subscript: Oja<sub>Arv</sub>
+Superscript: Oja<sup>Arv</sup>
+Shadowed: <span style="text-shadow: 2px 2px 4px #000000;"><i><i>OjaArv</i></i></span>
+
+
+
 
   <footer class="footer bg-dark text-white text-center py-3">
     <div class="container">
-      &copy; 2023 My App. All rights reserved.
+      &copy; 2023 <i>OjaArv</i>. All rights reserved.
     </div>
   </footer>
 
