--- a/contact.html
+++ b/contact.html
@@ -42,9 +42,10 @@
 
   <main>
     <div class="container">
+        <br>
       <h3 class="text-center"><i>Contact Us</i></h3>
-      <p>Get in touch with us for any inquiries or feedback.</p>
-      <form>
+      <!-- <p>Get in touch with us for any inquiries or feedback.</p> -->
+      <!-- <form>
         <div class="form-group">
           <label for="name">Name</label>
           <input type="text" class="form-control" id="name" placeholder="Your name">
@@ -58,12 +59,12 @@
           <textarea class="form-control" id="message" rows="5" placeholder="Your message"></textarea>
         </div>
         <button type="submit" class="btn btn-primary">Submit</button>
-      </form>
+      </form> -->
     </div>
    
         <div class="container">
          
-          <p>For any inquiries or assistance, please feel free to contact us:</p>
+            <p>For any inquiries or assistance, please feel free to contact us. You can call, text, or reach us via WhatsApp:</p>
           <div class="row">
             <div class="col-md-6">
               <h3>Office Locations:</h3>
